--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
-
   },
   "author": "Vaibhav Acharya",
   "license": "ISC",
@@ -14,6 +13,8 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.7",
     "express": "^4.15.3",
+    "express-session": "^1.15.5",
+    "moment": "^2.18.1",
     "nodemon": "^1.11.0",
     "request": "^2.81.0"
   }
